force-app/main/default/objects/Pokemon__c/fields/height__c.field-meta.xml
<CustomField>
    <fullName>height__c</fullName>
    <label>height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>