force-app/main/default/objects/Pokemon__c/fields/Hp__c.field-meta.xml
<CustomField>
    <fullName>Hp__c</fullName>
    <label>Hp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>