force-app/main/default/objects/Pokemon__c/fields/Sprite__c.field-meta.xml
<CustomField>
    <fullName>Sprite__c</fullName>
    <label>Sprite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>