force-app/main/default/objects/Pokemon__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Id__c</columns>
    <columns>height__c</columns>
    <columns>weight__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>